Bug 267280 - Crash when closing System Monitor with custom config
Summary: Crash when closing System Monitor with custom config
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-27 23:08 UTC by Patrick
Modified: 2011-03-28 23:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick 2011-02-27 23:08:56 UTC
Application: ksysguard (4.6.00 (4.6.0) "release 386")
KDE Platform Version: 4.6.00 (4.6.0) "release 386"
Qt Version: 4.7.1
Operating System: Linux 2.6.34.7-0.7-desktop x86_64
Distribution: "openSUSE 11.3 (x86_64)"

-- Information about the crash:
I had edited the "Hard Disk Totals" tab to add the processes tree (and noted that this part had vanished from its tab). This application now systematically crashes when being closed. Now, just before this one, I had reduced the number of rows in "Hard Disk Totals" to remove the processes tree (as I didn't spot any other way).

Sorry for the mix of issues here but htis all migth be related.

The crash can be reproduced every time.

-- Backtrace:
Application: System Monitor (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  0x0000000000000000 in ?? ()
#7  0x00007fb3c94de93d in WorkSheet::collectHosts (this=0x853000, list=...) at /usr/src/debug/kdebase-workspace-4.6.0/ksysguard/gui/WorkSheet.cc:631
#8  0x00007fb3c94ded64 in WorkSheet::exportWorkSheet (this=0x853000, fileName=...) at /usr/src/debug/kdebase-workspace-4.6.0/ksysguard/gui/WorkSheet.cc:195
#9  0x00007fb3c94e4a2d in Workspace::saveWorkSheet (this=<value optimized out>, sheet=0x853000) at /usr/src/debug/kdebase-workspace-4.6.0/ksysguard/gui/Workspace.cc:221
#10 0x00007fb3c94e4dec in Workspace::saveOnQuit (this=0x7944e0) at /usr/src/debug/kdebase-workspace-4.6.0/ksysguard/gui/Workspace.cc:179
#11 0x00007fb3c94e8e4f in TopLevel::queryClose (this=0x792880) at /usr/src/debug/kdebase-workspace-4.6.0/ksysguard/gui/ksysguard.cc:376
#12 0x00007fb3daff32b1 in KMainWindow::closeEvent (this=0x792880, e=0x7fff58b7efa0) at /usr/src/debug/kdelibs-4.6.0/kdeui/widgets/kmainwindow.cpp:594
#13 0x00007fb3d942b85e in QWidget::event (this=0x792880, event=0x7fff58b7efa0) at kernel/qwidget.cpp:8358
#14 0x00007fb3d97f1dcb in QMainWindow::event (this=0x792880, event=0x7fff58b7efa0) at widgets/qmainwindow.cpp:1478
#15 0x00007fb3daf99463 in KXmlGuiWindow::event (this=0x792880, ev=0x7fff58b7efa0) at /usr/src/debug/kdelibs-4.6.0/kdeui/xmlgui/kxmlguiwindow.cpp:126
#16 0x00007fb3c94e927e in TopLevel::event (this=0x792880, e=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.6.0/ksysguard/gui/ksysguard.cc:335
#17 0x00007fb3d93d9cd4 in QApplicationPrivate::notify_helper (this=0x6e9b20, receiver=0x792880, e=0x7fff58b7efa0) at kernel/qapplication.cpp:4445
#18 0x00007fb3d93e21ca in QApplication::notify (this=<value optimized out>, receiver=0x792880, e=0x7fff58b7efa0) at kernel/qapplication.cpp:4324
#19 0x00007fb3daeedec6 in KApplication::notify (this=0x6e9a50, receiver=0x792880, event=0x7fff58b7efa0) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#20 0x00007fb3da238e2c in QCoreApplication::notifyInternal (this=0x6e9a50, receiver=0x792880, event=0x7fff58b7efa0) at kernel/qcoreapplication.cpp:732
#21 0x00007fb3d9426231 in sendEvent (this=0x73a910, mode=QWidgetPrivate::CloseWithSpontaneousEvent) at ../../src/corelib/kernel/qcoreapplication.h:215
#22 QWidgetPrivate::close_helper (this=0x73a910, mode=QWidgetPrivate::CloseWithSpontaneousEvent) at kernel/qwidget.cpp:7766
#23 0x00007fb3d94595e6 in translateCloseEvent (this=<value optimized out>, w=0x792880, event=<value optimized out>, passive_only=<value optimized out>) at kernel/qapplication_x11.cpp:5356
#24 QApplication::x11ClientMessage (this=<value optimized out>, w=0x792880, event=<value optimized out>, passive_only=<value optimized out>) at kernel/qapplication_x11.cpp:3080
#25 0x00007fb3d9457a6b in QApplication::x11ProcessEvent (this=0x6e9a50, event=0x7fff58b7f680) at kernel/qapplication_x11.cpp:3703
#26 0x00007fb3d947f212 in x11EventSourceDispatch (s=0x6ed870, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#27 0x00007fb3d5ae0a93 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#28 0x00007fb3d5ae1270 in ?? () from /usr/lib64/libglib-2.0.so.0
#29 0x00007fb3d5ae1510 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#30 0x00007fb3da263a8f in QEventDispatcherGlib::processEvents (this=0x617ca0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#31 0x00007fb3d947eeae in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007fb3da238262 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007fb3da238475 in QEventLoop::exec (this=0x7fff58b7f9a0, flags=...) at kernel/qeventloop.cpp:201
#34 0x00007fb3da23c8db in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#35 0x00007fb3c94ec453 in kdemain (argc=-917582096, argv=0x615e90) at /usr/src/debug/kdebase-workspace-4.6.0/ksysguard/gui/ksysguard.cc:582
#36 0x0000000000407609 in launch (argc=1, _name=0x6a8f28 "/usr/bin/ksysguard", args=<value optimized out>, cwd=0x0, envc=<value optimized out>, envs=<value optimized out>, reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x6a8f58 "pat;1298843877;691719;6405_TIME43571632") at /usr/src/debug/kdelibs-4.6.0/kinit/kinit.cpp:730
#37 0x0000000000408125 in handle_launcher_request (sock=8, who=<value optimized out>) at /usr/src/debug/kdelibs-4.6.0/kinit/kinit.cpp:1222
#38 0x000000000040889a in handle_requests (waitForPid=<value optimized out>) at /usr/src/debug/kdelibs-4.6.0/kinit/kinit.cpp:1415
#39 0x00000000004094f0 in main (argc=4, argv=0x7fff58b81018, envp=0x7fff58b81040) at /usr/src/debug/kdelibs-4.6.0/kinit/kinit.cpp:1903

Reported using DrKonqi
Comment 1 John Tapsell 2011-03-18 16:55:24 UTC
Git commit 131f5771362970523e10e14d963de14c23486507 by John Tapsell.
Committed on 18/03/2011 at 16:53.
Pushed by johnflux into branch 'master'.

Fix if the user creates a second Processes Table

BUG:267280

M  +4    -1    ksysguard/gui/WorkSheet.cpp     

http://commits.kde.org/kde-workspace/131f5771362970523e10e14d963de14c23486507
Comment 2 John Tapsell 2011-03-18 17:40:12 UTC
Git commit 876c365daf8510b323a7cccfacda97c1a8878919 by John Tapsell.
Committed on 18/03/2011 at 17:26.
Pushed by johnflux into branch 'master'.

Make it possible to remove a ProcessController

CCBUG: 267280

M  +4    -2    ksysguard/gui/SensorDisplayLib/ProcessController.cpp     
M  +1    -1    ksysguard/gui/SensorDisplayLib/ProcessController.h     
M  +5    -8    ksysguard/gui/SensorDisplayLib/SensorDisplay.cpp     
M  +2    -2    ksysguard/gui/WorkSheet.cpp     
M  +1    -1    ksysguard/gui/ksysguard.cpp     

http://commits.kde.org/kde-workspace/876c365daf8510b323a7cccfacda97c1a8878919
Comment 3 John Tapsell 2011-03-28 23:38:15 UTC
Git commit de71b01793df19d81c915910bd63f10d9bf22001 by John Tapsell.
Committed on 18/03/2011 at 17:26.
Pushed by johnflux into branch 'KDE/4.6'.

Make it possible to remove a ProcessController

CCBUG: 267280

M  +4    -2    ksysguard/gui/SensorDisplayLib/ProcessController.cpp     
M  +1    -1    ksysguard/gui/SensorDisplayLib/ProcessController.h     
M  +5    -8    ksysguard/gui/SensorDisplayLib/SensorDisplay.cpp     
M  +2    -2    ksysguard/gui/WorkSheet.cpp     
M  +1    -1    ksysguard/gui/ksysguard.cpp     

http://commits.kde.org/kde-workspace/de71b01793df19d81c915910bd63f10d9bf22001
Comment 4 John Tapsell 2011-03-28 23:38:20 UTC
Git commit 06471cc16172df567452fbd99ba084e1d6630ada by John Tapsell.
Committed on 18/03/2011 at 16:53.
Pushed by johnflux into branch 'KDE/4.6'.

Fix if the user creates a second Processes Table

BUG:267280

M  +4    -1    ksysguard/gui/WorkSheet.cpp     

http://commits.kde.org/kde-workspace/06471cc16172df567452fbd99ba084e1d6630ada