Fix if the user creates a second Processes Table

BUG:267280